<?xml version="1.0"?>
<package>
  <name>rgbd_detection2d_3d</name>
  <version>0.1.0</version>
  <description>Project a 2D detection to 3D within an RGB-D camera.</description>
  
  <author email="zhi.yan@utbm.fr">Zhi Yan</author>
  <maintainer email="zhi.yan@utbm.fr">Zhi Yan</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>darknet_ros_msgs</run_depend>
  <run_depend>vision_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
</package>
